src/tests/render_snapshots/snapshots/sabiql__render_snapshots__overlays__sql_modal_compare_tab_with_verdict.snap
---
source: src/tests/render_snapshots/overlays.rs
expression: output
---
test_project ▸ - ▸ -                                                                                                                 not loaded | localhost:5432/test
┌ [1] Explorer ─────────────────────────┐[Info] [Cols] [Idx] [FK] [RLS] [Trig] [DDL]                                                                                 
│ Press 'r' to load metadata            │┌ [2] Inspector ───────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                       ││(select a table)                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                ╭ SQL Editor ── [SQL] [Plan] [Compare] ────────────────────────────────────────────────────────────────────────────────────────────╮               │
│                │                                                                                                                                  │               │
│                │  ↓ Improved                                                                                                                      │               │
│                │                                                                                                                                  │               │
│                │   • Total cost: 1000.00 → 8.30 (-99.2%)                                                                                          │               │
│                │   • Seq Scan on users → Index Scan using idx_users_id on users                                                                   │               │
│                │   • Estimated rows: 2550 → 1                                                                                                     │               │
│                │                                                                                                                                  │               │
│                │  ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────  │               │
│                │                                                                                                                                  │               │
│                │  Previous                                                      │  Latest                                                         │               │
│                │  EXPLAIN  (0.10s)                                              │  EXPLAIN  (0.01s)                                               │               │
│                │  ───────────────────────────────────────────────────────────── │  ─────────────────────────────────────────────────────────────  │               │
│                │  Seq Scan on users  (cost=0.00..1000.00 rows=2550 width=36)    │  Index Scan using idx_users_id on users  (cost=0.28..8.30 row…  │               │
│                │    Filter: (id > 10)                                           │    Index Cond: (id > 10)                                        │───────────────┘
│                │                                                                                                                                  │───────────────┐
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │                                                                                                                                  │               │
│                │ ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── │               │
│                │  [NORMAL]                                                                                                                 Ready  │               │
│                ╰ e: Edit │ y: Yank │ Tab/⇧Tab: Switch │ Esc: Close ───────────────────────────────────────────────────────────────────────────────╯               │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
└───────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
